width of act-details divs reduced ever so slightly to prevent the odd overflow

--- a/app/assets/stylesheets/mixins/standard.css.scss
+++ b/app/assets/stylesheets/mixins/standard.css.scss
@@ -51,7 +51,7 @@ ul {list-style-position:outside; list-style-type:none; margin:0; padding:0;}
 			float: left;
 			padding-left: 20px;
 			position:relative;
-			width: 87%;
+			width: 85%;
 			
 			.description {
 				width: 80%;
